// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiEndpointMixin calling preventStringify before requestConfig prevents call to qs.stringify 1`] = `
Object {
  "baseURL": "http://localhost/api",
  "data": Object {
    "foo": "bar",
  },
  "headers": Object {
    "Accept": "application/json",
    "Content-Type": "application/x-www-form-urlencoded",
  },
  "method": "get",
  "paramsSerializer": [Function],
  "url": "url",
}
`;

exports[`ApiEndpointMixin requestConfig calls qs.stringify if data is an object and not FormData 1`] = `
Object {
  "baseURL": "http://localhost/api",
  "data": "string",
  "headers": Object {
    "Accept": "application/json",
    "Content-Type": "application/x-www-form-urlencoded",
  },
  "method": "get",
  "paramsSerializer": [Function],
  "url": "url",
}
`;

exports[`ApiEndpointMixin values are inherited by Endpoint 1`] = `
Object {
  "baseURL": "http://localhost/api",
  "data": "string",
  "headers": Object {
    "Accept": "application/json",
    "Content-Type": "application/x-www-form-urlencoded",
  },
  "method": "get",
  "paramsSerializer": [Function],
  "url": "url",
}
`;
